# NeuroPixel

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
.Jules/: palette.md
.agent/: pipeline_memory.md
.jules/: bolt.md
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: batch.py  images.py  plugins.py  system.py
apps/backend/app/core/: pipeline.py  plugin_spec.py
apps/backend/app/plugins/: __init__.py  manager.py
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web-client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web-client/src/: App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
apps/web-client/src/components/: AboutModal.tsx  AppMenuBar.tsx  BatchProgressModal.tsx  ComparisonEngine.tsx  ContextMenu.tsx  FolderPickerModal.tsx  ImageViewer.tsx  Layout.tsx  NodePalette.test.tsx  NodePalette.tsx  PipelineEditor.tsx  PluginController.tsx  ShortcutsModal.tsx
apps/web-client/src/components/nodes/: BaseNode.tsx  LoadBatchNode.tsx  LoadImageNode.tsx  MarkdownNoteNode.tsx  OperatorNode.tsx  PreviewNode.tsx  SaveBatchNode.tsx  SaveImageNode.tsx  index.ts
apps/web-client/src/hooks/: useBackendHealth.ts  useFolderPicker.ts  useImageUpload.ts  usePlugins.ts
apps/web-client/src/lib/: api.ts
apps/web-client/src/pages/: AnalysisWorkspace.tsx  BatchProcessingPage.tsx  ComparisonEngine.tsx  PipelineEditorPage.tsx
apps/web-client/src/store/: appStore.ts
apps/web-client/src/types/: nodeGraph.ts  plugin.ts
design/analysis_workspace_default_state/: code.html
design/comparison_engine_diff_mode/: code.html
design/pipeline_configuration_editor/: code.html
scripts/: populate_fixtures.py
