[package]
name = "neuropixel-desktop"
version = "0.1.0"
description = "NeuroPixel Desktop Application"
authors = ["NeuroPixel Team"]
edition = "2021"

[lib]
name = "neuropixel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
